<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.note.views.AddNoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput2"
            android:layout_below="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textHint">

            <EditText
                android:id="@+id/addDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/textInput2"
            android:layout_marginTop="10dp" />


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/submitUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>
