<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="?attr/textAppearanceListItem" />

        <ImageView
            android:id="@+id/note_editView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:src="@mipmap/edit"
            />

        <TextView
            android:id="@+id/note_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_below="@+id/note_title"/>

        <TextView
            android:id="@+id/note_createdTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_time"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_below="@+id/note_description"/>

        <ImageView
            android:id="@+id/note_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/note_createdTime"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
